Adding javadoc for tested types